--- a/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/wwwroot/index.html
+++ b/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/wwwroot/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>MudBlazorAndDefaultBlazorApp</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="MudBlazorAndDefaultBlazorApp.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
@@ -24,6 +25,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
